# swagger-mcp

./: .gitignore  LINEAR_README.md  Linear-API.graphql  OAUTH_SUPPORT.md  README.md  endpoint.py  endpoint_invoker.py  endpoint_invoker_example.py  interact_with_slack.py  linear.py  linear_example.py  linear_mcp.py  linear_service.py  linear_service_example.py  main.py  meta-tools.py  oauth_example.py  oauth_handler.py  openapi_mcp_example.py  openapi_mcp_readme.md  openapi_mcp_server.py  openapi_parser.py  philadelphia_weather_alerts.txt  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  server.py  setup.py  simple_endpoint.py  terminal_service.py  test.db  test_endpoint_invoker_examples.py  test_form_parameters.py  test_linear_client.py  test_mcp_client.py  test_oauth_detection.py  test_openapi_parser.py  test_slack_auth.py  test_slack_oauth_server.py  (+1 more)
.vscode-ext/: .gitignore  .vscodeignore  API_DOCS.md  LICENSE  README.md  extension.js  hello-world-0.1.0.vsix  package-lock.json  package.json
examples/: petstore_example.py  weather_2.py
sample_rest_api/: .gitignore  README.md  run.py  setup.bat
scripts/: inspector.sh  install-global.sh  integration-tests.sh  run_fixed_tests.sh  run_integration_tests.py  run_integration_tests.sh  run_tests.sh  sample-rest-api.sh  setup_dev_venv.sh  setup_venv.sh  start-inspector.sh  start-mcp-server.sh  start_sample_rest_api.sh  tests.sh
swagger_mcp/: endpoint_invoker.py  logging.py  openapi_mcp_server.py  openapi_parser.py  parse_dry_run.py  server_arg_parser.py  simple_endpoint.py  test_mcp_tools.py  (+4 more)
(+34 files in other folders)
