[project]
name = "swagger-mcp"
version = "0.1.0"
description = "A Swagger/OpenAPI MCP implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
swagger-mcp = "swagger_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["swagger_mcp/tests"]
python_files = ["test_*.py"]