[project]
name = "swagger-mcp"
version = "0.1.0"
description = "A Swagger/OpenAPI MCP implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1"
]

[project.scripts]
swagger-mcp = "swagger_mcp.openapi_mcp_server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["swagger_mcp/tests", "swagger_mcp/tests/unit", "swagger_mcp/tests/integration"]
python_files = ["test_*.py"]